@@ -8,14 +8,14 @@ AUX transmission-daemon.initd.2 3953 RMD160 f78589fe9de1db4160aa7c6333cef1fc835c
 AUX transmission-daemon.initd.8 2247 RMD160 aed10ce23fa58a624d15abbff56c8db37a9e6117 SHA1 d92068b481f40ee520b5f76263ed80c5bc8fe9f5 SHA256 c4383a3380c7dac82941d073a3d52451ed6e1d6bf0969ea0fe3e86aa4b8cbe2e
 DIST transmission-2.51.tar.xz 2784036 RMD160 f6e89c5d158733f24804a31c8e2f9367bcc0d823 SHA1 3d8396365bb6c325c1140567f9a7d38a5898bb54 SHA256 1c9a54864acf8fd0c7aa4132e9e69b454a7c72c305c96016a38551157af8858b
 DIST transmission-2.52.tar.xz 2784408 RMD160 ad54164864b88476d412573e89a0540524022c26 SHA1 71c42738aa86b360cb527ec796d562f12f86a84c SHA256 bcddfb7be014bc2765775a25217203d327bd1ec121971954623d8c3360c14e17
-EBUILD transmission-2.51.ebuild 4184 RMD160 4bebcab3442cc282e1585370ce00f846f6e9f3c0 SHA1 05e5525f6f8f21d605828e7d0b5b07c9af3e505a SHA256 e0bdf2fc221da857bdc073ed58888bd7b4d7f7b6e6803d6389e3cacc1a67cc8b
-EBUILD transmission-2.52.ebuild 4364 RMD160 c96e86bc2db8dc372e48c18e25972e3b3a066e6c SHA1 093ea10daf8978f15f2336588c95c2cbc459abc7 SHA256 fb0609b6ace9e64b025d91e9aabe651fd36d9e64d5caf98adff3185f94f12b4e
-MISC ChangeLog 34635 RMD160 eca6ff497f48cf14f1d3bc64c989cf1192d2749e SHA1 eea033e77a004bb53ecfc1b2d649b58d98ff4afa SHA256 5c3ab06ca53efe8c7706c8c381b6839a592b6499d42401a816a7f879f0410c42
+EBUILD transmission-2.51.ebuild 4140 RMD160 920f2230426277b24861cffdc7e99a94d0733536 SHA1 a4634a5ab7f0ce695c01f442642b5ceaf3398282 SHA256 78ae007e5179739be0076452c9552b52fa76187bf2f53206f9d5294449a43c3c
+EBUILD transmission-2.52.ebuild 4320 RMD160 f1967f0aced459106b429c25937ebdd6d95c14e2 SHA1 c8a555a99d49f2d41bcb00ae45e9c7ce3b83152e SHA256 c94eaad0400824b9ffde1848e439b3ffcbf6ae9ef73e0f62795e020f6a309369
+MISC ChangeLog 34851 RMD160 712d1415dec628fb53abf4ad682a5bd2239a6d79 SHA1 e4fb81cdceabba93ae6e7ff5ad5fbc71eea1bf82 SHA256 afcbe60e1a78239e5b3043419bcef3511c43a5b6bd41566b96ccfe30251d8b03
 MISC metadata.xml 661 RMD160 8414fd564a443a98be5ae6c3bcb032c26f1ac4a7 SHA1 f216cbcb15dc9c211a946dfab3597851fd1995a8 SHA256 5dadc7aff55c289bc229fdaeb2bf63475ad8c7ff8a523d7fdc4096e0755f2cff
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/CHMMACgkQX3X2B8XHTolVywCgkADGuznhkI5nTpgH7x1GIahz
-HFEAn3Gc0MZYzAW81tCeEv+GLyKcH07j
-=Kyqj
+iEYEARECAAYFAk/LNVgACgkQX3X2B8XHTokPCgCdFqV5+g+zWsLHmfQ/+Zhud1bk
+/eYAn0JLT+EY+VcxdG6EkIf8hZ57glos
+=nozv
 -----END PGP SIGNATURE-----
