@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/transmission
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission/ChangeLog,v 1.194 2012/05/24 01:55:29 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission/ChangeLog,v 1.195 2012/06/01 04:12:06 zmedico Exp $
+
+  01 Jun 2012; Zac Medico <zmedico@gentoo.org> transmission-2.51.ebuild,
+  transmission-2.52.ebuild, transmission-9999.ebuild:
+  tweak inherits so repoman can parse them, and inherit user for enewgroup and
+  enewuser
 
 *transmission-2.52 (24 May 2012)
 
